Don't go through presshells to get to our window; just use the global object. This fixes various issues that could bite display:none iframes, in particular bug 262998.  r+sr=jst